--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/lucide-static/font/lucide.css">
+
 
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+
+
   <header>
     <div class="container nav-row">
       <div class="brand">
@@ -26,11 +30,11 @@
       <nav>
         <button class="menu-toggle" id="menuToggle">☰</button>
         <ul id="navList">
-          <li><a href="#inicio">Inicio</a></li>
-          <li><a href="#ruta">Proyectos</a></li>
-          <li><a href="#skills">Habilidades</a></li>
-          <li><a href="#sobre-mi">Sobre mí</a></li>
-          <li><a href="#contacto" class="cta">Contactame</a></li>
+          <li> <a data-section="inicio" class="active">Inicio</a></li>
+          <li><a data-section="proyectos">Proyectos</a></li>
+          <li><a data-section="">Habilidades</a></li>
+          <li><a data-section="sobre-mi">Sobre mí</a></li>
+          <li><a class="cta" data-section="contacto">Contacto</a></li>
         </ul>
       </nav>
     </div>
@@ -38,27 +42,146 @@
 
   <main class="container">
     <!-- HERO -->
-    <section id="inicio" class="hero fade-in">
-      <div class="hero-card">
-        <div class="eyebrow">Desarrollador · Diseñador</div>
-        <h1>Hola — soy Facundo De León.</h1>
-        <p class="lead">Construyo experiencias digitales limpias y con impacto. Especializado en interfaces, rendimiento
-          y productos listos para producción.</p>
-        <div class="actions">
-          <a class="cta" href="#contacto">Contratar</a>
-          <a class="btn-secundario" href="#proyectos">Ver proyectos</a>
+    <section id="inicio" class="section active">
+
+      <section id="inicio" class="hero fade-in">
+        <div class="hero-card">
+          <div class="eyebrow">Desarrollador · Diseñador</div>
+          <h1>Hola — soy Facundo De León.</h1>
+          <p class="lead">Construyo experiencias digitales limpias y con impacto. Especializado en interfaces,
+            rendimiento
+            y productos listos para producción.</p>
+          <div class="actions">
+            <a class="cta" href="#contacto">Contratar</a>
+            <a class="btn-secundario" href="#proyectos">Ver proyectos</a>
+          </div>
+
         </div>
 
-      </div>
+        <aside class="profile-tile">
 
-      <aside class="profile-tile">
-        <div class="avatar"><img src="./multimedia/img/logo.jpg" alt="avatar" /></div>
-        <div class="mini-stats">
-          <div class="stat"><b>8+</b><span>Años</span></div>
-          <div class="stat"><b>60+</b><span>Proyectos</span></div>
+          <div class="avatar"><img src="./multimedia/img/logo.jpg" alt="avatar" /></div>
+          <div class="mini-stats">
+            <div class="stat"><b>8+</b><span>Años</span></div>
+
+            <div class="stat"><b>60+</b><span>Proyectos</span></div>
+        </aside>
+
+        <div class="hab">
+          <div class="skills-grid">
+            <div class="skill-card">
+              <div class="skill-header">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML">
+                <h3>HTML & CSS</h3>
+              </div>
+              <div class="progress-bar">
+                <div class="progress" data-level="90"></div>
+              </div>
+              <p class="level">Avanzado</p>
+            </div>
+
+            <div class="skill-card">
+              <div class="skill-header">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg"
+                  alt="JS">
+                <h3>JavaScript</h3>
+              </div>
+              <div class="progress-bar">
+                <div class="progress" data-level="85"></div>
+              </div>
+              <p class="level">Avanzado</p>
+            </div>
+
+            <div class="skill-card">
+              <div class="skill-header">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" alt="React">
+                <h3>React / Next.js</h3>
+              </div>
+              <div class="progress-bar">
+                <div class="progress" data-level="80"></div>
+              </div>
+              <p class="level">Intermedio-Avanzado</p>
+            </div>
+          </div>
+          <div class="divider"></div>
         </div>
-      </aside>
-      <div class="divider"></div>
+        <div>
+          <section class="social-links">
+            <a href="https://github.com/tuusuario" target="_blank" class="social-circle github">
+              <i class="fab fa-github"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/tuusuario" target="_blank" class="social-circle linkedin">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
+            <a href="https://twitter.com/tuusuario" target="_blank" class="social-circle twitter">
+              <i class="fab fa-twitter"></i>
+            </a>
+            <a href="mailto:tuemail@mail.com" class="social-circle mail">
+              <i class="fas fa-envelope"></i>
+            </a>
+          </section>
+          <div></div>
+
+        </div>
+
+        </div>
+
+      </section>
+    </section>
+    <!-- SOBRE MÍ -->
+    <section id="sobre-mi" class="section">
+
+      <section class="about-section">
+        <div class="container about-card">
+          <div class="about-text">
+            <h2 class="section-title">Sobre mí</h2>
+            <p>
+              Soy <strong>Facundo De León</strong>, desarrollador y diseñador web enfocado en
+              crear experiencias digitales <strong>rápidas, limpias y con impacto</strong>.
+              Me especializo en <em>interfaces, optimización de rendimiento</em>
+              y soluciones listas para producción.
+            </p>
+            <ul class="about-info">
+              <li><strong>Experiencia:</strong> 8+ años</li>
+              <li><strong>Proyectos:</strong> 60+</li>
+              <li><strong>Idiomas:</strong> Español, Inglés</li>
+            </ul>
+            <a href="#" class="about-btn">Descargar CV</a>
+          </div>
+        </div>
+        <div class="timeline">
+          <div class="timeline-item">
+            <div class="timeline-dot"></div>
+            <div class="timeline-content">
+              <h3>2016</h3>
+              <p>Primer proyecto freelance</p>
+            </div>
+          </div>
+
+          <div class="timeline-item">
+            <div class="timeline-dot"></div>
+            <div class="timeline-content">
+              <h3>2019</h3>
+              <p>Desarrollo de SaaS</p>
+            </div>
+          </div>
+
+          <div class="timeline-item">
+            <div class="timeline-dot"></div>
+            <div class="timeline-content">
+              <h3>2022</h3>
+              <p>Especialización en Next.js</p>
+            </div>
+          </div>
+
+          <div class="timeline-item">
+            <div class="timeline-dot"></div>
+            <div class="timeline-content">
+              <h3>2024</h3>
+              <p>60+ proyectos entregados</p>
+            </div>
+          </div>
+      </section>
     </section>
 
     <section class="workflow-section">
@@ -111,76 +234,85 @@
     </section>
 
 
-    <!-- BLOG / INSIGHTS -->
-    <section class="blog-section">
-      <div class="container">
-        <h2 class="section-title">Blog & Insights</h2>
-        <p class="section-subtitle">Ideas, tendencias y aprendizajes que comparto.</p>
-        <div class="blog-grid">
-          <article class="blog-card">
-            <h3>🚀 Cómo optimizar tu React App</h3>
-            <p>Tips prácticos de rendimiento y buenas prácticas en React.</p>
-            <a href="#" class="blog-link">Leer más</a>
+    <section id="blog" class="section">
+
+      <section class="blog-section">
+        <div class="container">
+          <h2 class="section-title">Blog & Insights</h2>
+          <p class="section-subtitle">Ideas, tendencias y aprendizajes que comparto.</p>
+          <div class="blog-grid">
+            <article class="blog-card">
+              <h3>🚀 Cómo optimizar tu React App</h3>
+              <p>Tips prácticos de rendimiento y buenas prácticas en React.</p>
+              <a href="#" class="blog-link">Leer más</a>
+            </article>
+            <article class="blog-card">
+              <h3>🎨 UX/UI: Diseño centrado en el usuario</h3>
+              <p>Principios clave para crear interfaces limpias y funcionales.</p>
+              <a href="#" class="blog-link">Leer más</a>
+            </article>
+            <article class="blog-card">
+              <h3>⚡ El futuro del desarrollo web</h3>
+              <p>Reflexiones sobre nuevas tecnologías y su impacto.</p>
+              <a href="#" class="blog-link">Leer más</a>
+            </article>
+          </div>
+        </div>
+      </section>
+    </section>
+    <!-- PROYECTOS -->
+
+    <section id="proyectos" class="section">
+      <section id="proyectos" class="fade-in">
+
+        <div class="section-title">
+          <h2>Proyectos</h2><br>
+          <div class="section-sub">Selección de trabajos recientes</div><br>
+        </div>
+
+        <div class="projects-grid">
+          <article class="project">
+            <img src="./multimedia/img/proyecto1.png" alt="Portafolio Retro-Tech" class="project-image">
+            <h3>Portafolio Estilo retro-tech</h3> <br>
+            <p>Diseño inspirado en entornos Linux y terminal, con estilo retro-futurista y visualización de datos.
+              Explora
+              mis proyectos, habilidades y servicios.</p>
+            <div class=" tags"><span class="tag">HTML</span><span class="tag">CSS</span><span
+                class="tag">Javascript</span>
+            </div>
           </article>
-          <article class="blog-card">
-            <h3>🎨 UX/UI: Diseño centrado en el usuario</h3>
-            <p>Principios clave para crear interfaces limpias y funcionales.</p>
-            <a href="#" class="blog-link">Leer más</a>
+          <article class="project">
+            <img src="./multimedia/img/proyecto2.png" alt="Landing Page" class="project-image" />
+
+            <h3>Landing Page</h3> <br>
+            <p>Diseñé una landing page moderna y funcional para devices_f2, un servicio especializado en soporte
+              técnico
+              y
+              reparación de computadoras.Enfocando la experiencia en la conversión mediante un diseño atractivo y
+              llamadas a la acción directas.</p>
+            <div class=" tags"><span class="tag">React</span><span class="tag">Tailwind CSS</span><span
+                class="tag">Next.js</span><span class="tag">shadcn/ui</span>
+            </div>
           </article>
-          <article class="blog-card">
-            <h3>⚡ El futuro del desarrollo web</h3>
-            <p>Reflexiones sobre nuevas tecnologías y su impacto.</p>
-            <a href="#" class="blog-link">Leer más</a>
+
+          <article class="project">
+            <img src="./multimedia/img/proyecto3.png" alt="E-commerce" class="project-image" />
+            <h3>Aplicación e-Commerce</h3> <br>
+            <p>Actualmente participo en el desarrollo de un E-commerce funcional como parte de un proyecto grupal en
+              el
+              curso de Desarrollo Web. El objetivo es simular un entorno real de trabajo colaborativo, aplicando las
+              bases
+              del desarrollo frontend y el consumo de APIs para construir una tienda en línea moderna y responsiva.
+            </p>
+            <div class="tags"><span class="tag">HTML</span><span class="tag">CSS</span><span
+                class="tag">Bootstrap</span><span class="tag">JavaScript</span><span class="tag">Consumo de
+                API</span><span class="tag">Git & GitHub</span>
+            </div>
           </article>
         </div>
-      </div>
+      </section>
     </section>
 
-    <!-- PROYECTOS -->
-    <section id="proyectos" class="fade-in">
-
-      <div id="ruta" class="section-title">
-        <h2>Proyectos</h2><br>
-        <div class="section-sub">Selección de trabajos recientes</div><br>
-      </div>
-
-      <div class="projects-grid">
-        <article class="project">
-          <img src="./multimedia/img/proyecto1.png" alt="Portafolio Retro-Tech" class="project-image">
-          <h3>Portafolio Estilo retro-tech</h3> <br>
-          <p>Diseño inspirado en entornos Linux y terminal, con estilo retro-futurista y visualización de datos. Explora
-            mis proyectos, habilidades y servicios.</p>
-          <div class=" tags"><span class="tag">HTML</span><span class="tag">CSS</span><span
-              class="tag">Javascript</span>
-          </div>
-        </article>
-        <article class="project">
-          <img src="./multimedia/img/proyecto2.png" alt="Landing Page" class="project-image" />
-
-          <h3>Landing Page</h3> <br>
-          <p>Diseñé una landing page moderna y funcional para devices_f2, un servicio especializado en soporte técnico y
-            reparación de computadoras.Enfocando la experiencia en la conversión mediante un diseño atractivo y
-            llamadas a la acción directas.</p>
-          <div class=" tags"><span class="tag">React</span><span class="tag">Tailwind CSS</span><span
-              class="tag">Next.js</span><span class="tag">shadcn/ui</span>
-          </div>
-        </article>
-
-        <article class="project">
-          <img src="./multimedia/img/proyecto3.png" alt="E-commerce" class="project-image" />
-          <h3>Aplicación e-Commerce</h3> <br>
-          <p>Actualmente participo en el desarrollo de un E-commerce funcional como parte de un proyecto grupal en el
-            curso de Desarrollo Web. El objetivo es simular un entorno real de trabajo colaborativo, aplicando las bases
-            del desarrollo frontend y el consumo de APIs para construir una tienda en línea moderna y responsiva.</p>
-          <div class="tags"><span class="tag">HTML</span><span class="tag">CSS</span><span
-              class="tag">Bootstrap</span><span class="tag">JavaScript</span><span class="tag">Consumo de
-              API</span><span class="tag">Git & GitHub</span>
-          </div>
-        </article>
-      </div>
-    </section>
-
-    <!-- SKILLS -->
     <section>
       <h2>Habilidades</h2>
       <p>Tecnologías en las que trabajo</p>
@@ -244,7 +376,9 @@
     </section>
 
     <!-- CONTACTO -->
-    <section id="contacto">
+
+
+    <section id="contacto" class="section">
       <h2>Contacto</h2>
       <p>¿Tienes una idea en mente? Escríbeme y te responderé lo antes posible.</p>
 
@@ -270,14 +404,16 @@
         </div>
       </div>
     </section>
+
   </main>
 
-  <footer style="text-align: center; padding: 20px; color: #ccc; font-size: 14px;">
-    © 2025 Facundo De León — Diseño & Desarrollo Web <br>
-    <a href="https://instagram.com/devices_.f2" target="_blank" style="color: #9b59b6; margin: 0 10px;">Instagram</a> |
-    <a href="https://github.com/" target="_blank" style="color: #9b59b6; margin: 0 10px;">GitHub</a>
+  <footer class="footer">
+    <p>© <span id="year"></span> Facundo De León — Diseño & Desarrollo Web</p>
+    <div class="social-links">
+      <a href="https://instagram.com/devices_.f2" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+      <a href="https://github.com/" target="_blank"><i class="fa-brands fa-github"></i></a>
+    </div>
   </footer>
-
 
 
   <script src="script.js"></script>
