--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
         <ul id="navList">
           <li> <a data-section="inicio" class="active">Inicio</a></li>
           <li><a data-section="proyectos">Proyectos</a></li>
-          <li><a data-section="">Habilidades</a></li>
+          <li><a data-section="blog">Blog</a></li>
+          <li><a data-section="skills">Habilidades</a></li>
           <li><a data-section="sobre-mi">Sobre mí</a></li>
           <li><a class="cta" data-section="contacto">Contacto</a></li>
         </ul>
@@ -131,7 +132,7 @@
     <!-- SOBRE MÍ -->
     <section id="sobre-mi" class="section">
 
-      <section class="about-section">
+      <section class="about-section ">
         <div class="container about-card">
           <div class="about-text">
             <h2 class="section-title">Sobre mí</h2>
@@ -148,6 +149,8 @@
             </ul>
             <a href="#" class="about-btn">Descargar CV</a>
           </div>
+
+
         </div>
         <div class="timeline">
           <div class="timeline-item">
@@ -181,143 +184,140 @@
               <p>60+ proyectos entregados</p>
             </div>
           </div>
+        </div>
+
       </section>
     </section>
 
-    <section class="workflow-section">
-      <div class="container">
-        <!-- Proceso de trabajo -->
-        <h2 class="section-title">Mi Proceso de Trabajo</h2>
-        <div class="workflow-steps">
-          <div class="step">
-            <span class="step-number">1</span>
-            <h3>Briefing</h3>
-            <p>Escucho las necesidades del cliente y defino objetivos claros.</p>
-          </div>
-          <div class="step">
-            <span class="step-number">2</span>
-            <h3>Diseño UX/UI</h3>
-            <p>Creo wireframes y prototipos modernos centrados en el usuario.</p>
-          </div>
-          <div class="step">
-            <span class="step-number">3</span>
-            <h3>Desarrollo</h3>
-            <p>Implemento código limpio, optimizado y escalable.</p>
-          </div>
-          <div class="step">
-            <span class="step-number">4</span>
-            <h3>Testing & Deploy</h3>
-            <p>Pruebo rendimiento y despliego productos listos para producción.</p>
-          </div>
-        </div>
+    <section id="proyectos" class="section">
+      <h2 class="section-title">Proyectos</h2><br>
+      <p class="section-subtitle">Selección de trabajos recientes</p><br>
+      </div>
 
-        <!-- Estadísticas -->
-        <div class="stats">
-          <div class="stat-card">
-            <h3>10k+</h3>
-            <p>Horas de código</p>
+      <div class="projects-grid">
+        <article class="project">
+          <img src="./multimedia/img/proyecto1.png" alt="Portafolio Retro-Tech" class="project-image">
+          <h3>Portafolio Estilo retro-tech</h3> <br>
+          <p>Diseño inspirado en entornos Linux y terminal, con estilo retro-futurista y visualización de datos.
+            Explora
+            mis proyectos, habilidades y servicios.</p>
+          <div class=" tags"><span class="tag">HTML</span><span class="tag">CSS</span><span
+              class="tag">Javascript</span>
           </div>
-          <div class="stat-card">
-            <h3>60+</h3>
-            <p>Proyectos completados</p>
+        </article>
+        <article class="project">
+          <img src="./multimedia/img/proyecto2.png" alt="Landing Page" class="project-image" />
+
+          <h3>Landing Page</h3> <br>
+          <p>Diseñé una landing page moderna y funcional para devices_f2, un servicio especializado en soporte
+            técnico
+            y
+            reparación de computadoras.</p>
+          <div class=" tags"><span class="tag">React</span><span class="tag">Tailwind CSS</span><span
+              class="tag">Next.js</span><span class="tag">shadcn/ui</span>
           </div>
-          <div class="stat-card">
-            <h3>15+</h3>
-            <p>Tecnologías dominadas</p>
+        </article>
+
+        <article class="project">
+          <img src="./multimedia/img/proyecto3.png" alt="E-commerce" class="project-image" />
+          <h3>Aplicación e-Commerce</h3> <br>
+          <p>Actualmente participo en el desarrollo de un E-commerce funcional como parte de un proyecto grupal en
+            el
+            curso de Desarrollo Web.
+          </p>
+          <div class="tags"><span class="tag">HTML</span><span class="tag">CSS</span><span
+              class="tag">Bootstrap</span><span class="tag">JavaScript</span><span class="tag">Consumo de
+              API</span><span class="tag">Git & GitHub</span>
           </div>
-          <div class="stat-card">
-            <h3>5k+</h3>
-            <p>Usuarios alcanzados</p>
-          </div>
+        </article>
+      </div>
+    </section>
+
+    <section id="workflow" class="section">
+
+      <!-- Proceso de trabajo -->
+      <h2 class="section-title">Mi Proceso de Trabajo</h2>
+      <div class="workflow-steps">
+        <div class="step">
+          <span class="step-number">1</span>
+          <h3>Briefing</h3>
+          <p>Escucho las necesidades del cliente y defino objetivos claros.</p>
         </div>
+        <div class="step">
+          <span class="step-number">2</span>
+          <h3>Diseño UX/UI</h3>
+          <p>Creo wireframes y prototipos modernos centrados en el usuario.</p>
+        </div>
+        <div class="step">
+          <span class="step-number">3</span>
+          <h3>Desarrollo</h3>
+          <p>Implemento código limpio, optimizado y escalable.</p>
+        </div>
+        <div class="step">
+          <span class="step-number">4</span>
+          <h3>Testing & Deploy</h3>
+          <p>Pruebo rendimiento y despliego productos listos para producción.</p>
+        </div>
+      </div>
+
+      <!-- Estadísticas -->
+      <div class="stats">
+        <div class="stat-card">
+          <h3>10k+</h3>
+          <p>Horas de código</p>
+        </div>
+        <div class="stat-card">
+          <h3>60+</h3>
+          <p>Proyectos completados</p>
+        </div>
+        <div class="stat-card">
+          <h3>15+</h3>
+          <p>Tecnologías dominadas</p>
+        </div>
+        <div class="stat-card">
+          <h3>5k+</h3>
+          <p>Usuarios alcanzados</p>
+        </div>
+      </div>
       </div>
     </section>
 
 
-    <section id="blog" class="section">
+    <!-- BLOG -->
 
-      <section class="blog-section">
-        <div class="container">
-          <h2 class="section-title">Blog & Insights</h2>
-          <p class="section-subtitle">Ideas, tendencias y aprendizajes que comparto.</p>
-          <div class="blog-grid">
-            <article class="blog-card">
-              <h3>🚀 Cómo optimizar tu React App</h3>
-              <p>Tips prácticos de rendimiento y buenas prácticas en React.</p>
-              <a href="#" class="blog-link">Leer más</a>
-            </article>
-            <article class="blog-card">
-              <h3>🎨 UX/UI: Diseño centrado en el usuario</h3>
-              <p>Principios clave para crear interfaces limpias y funcionales.</p>
-              <a href="#" class="blog-link">Leer más</a>
-            </article>
-            <article class="blog-card">
-              <h3>⚡ El futuro del desarrollo web</h3>
-              <p>Reflexiones sobre nuevas tecnologías y su impacto.</p>
-              <a href="#" class="blog-link">Leer más</a>
-            </article>
-          </div>
-        </div>
-      </section>
+
+    <section id="blog" class="section">
+      <h2 class="section-title">Blog & Insights</h2>
+      <p class="section-subtitle">Ideas, tendencias y aprendizajes que comparto.</p>
+      <div class="blog-grid">
+        <article class="blog-card">
+          <img src="./multimedia/img/proyecto3.png" alt="E-commerce" class="blog-image" />
+          <h3>🚀 Cómo optimizar tu React App</h3>
+          <p>Tips prácticos de rendimiento y buenas prácticas en React.</p>
+          <a href="#" class="blog-link">Leer más</a>
+        </article>
+        <article class="blog-card">
+          <img src="./multimedia/img/proyecto3.png" alt="E-commerce" class="project-image" />
+          <h3>🎨 UX/UI: Diseño centrado en el usuario</h3>
+          <p>Principios clave para crear interfaces limpias y funcionales.</p>
+          <a href="#" class="blog-link">Leer más</a>
+        </article>
+        <article class="blog-card">
+          <img src="./multimedia/img/proyecto3.png" alt="E-commerce" class="project-image" />
+          <h3>⚡ El futuro del desarrollo web</h3>
+          <p>Reflexiones sobre nuevas tecnologías y su impacto.</p>
+          <a href="#" class="blog-link">Leer más</a>
+        </article>
+      </div>
     </section>
     <!-- PROYECTOS -->
 
-    <section id="proyectos" class="section">
-      <section id="proyectos" class="fade-in">
 
-        <div class="section-title">
-          <h2>Proyectos</h2><br>
-          <div class="section-sub">Selección de trabajos recientes</div><br>
-        </div>
+    <section id="skills" class="section">
+      <h2 class="section-title">Habilidades</h2>
+      <p class="section-subtitle">Tecnologías en las que trabajo</p>
 
-        <div class="projects-grid">
-          <article class="project">
-            <img src="./multimedia/img/proyecto1.png" alt="Portafolio Retro-Tech" class="project-image">
-            <h3>Portafolio Estilo retro-tech</h3> <br>
-            <p>Diseño inspirado en entornos Linux y terminal, con estilo retro-futurista y visualización de datos.
-              Explora
-              mis proyectos, habilidades y servicios.</p>
-            <div class=" tags"><span class="tag">HTML</span><span class="tag">CSS</span><span
-                class="tag">Javascript</span>
-            </div>
-          </article>
-          <article class="project">
-            <img src="./multimedia/img/proyecto2.png" alt="Landing Page" class="project-image" />
-
-            <h3>Landing Page</h3> <br>
-            <p>Diseñé una landing page moderna y funcional para devices_f2, un servicio especializado en soporte
-              técnico
-              y
-              reparación de computadoras.Enfocando la experiencia en la conversión mediante un diseño atractivo y
-              llamadas a la acción directas.</p>
-            <div class=" tags"><span class="tag">React</span><span class="tag">Tailwind CSS</span><span
-                class="tag">Next.js</span><span class="tag">shadcn/ui</span>
-            </div>
-          </article>
-
-          <article class="project">
-            <img src="./multimedia/img/proyecto3.png" alt="E-commerce" class="project-image" />
-            <h3>Aplicación e-Commerce</h3> <br>
-            <p>Actualmente participo en el desarrollo de un E-commerce funcional como parte de un proyecto grupal en
-              el
-              curso de Desarrollo Web. El objetivo es simular un entorno real de trabajo colaborativo, aplicando las
-              bases
-              del desarrollo frontend y el consumo de APIs para construir una tienda en línea moderna y responsiva.
-            </p>
-            <div class="tags"><span class="tag">HTML</span><span class="tag">CSS</span><span
-                class="tag">Bootstrap</span><span class="tag">JavaScript</span><span class="tag">Consumo de
-                API</span><span class="tag">Git & GitHub</span>
-            </div>
-          </article>
-        </div>
-      </section>
-    </section>
-
-    <section>
-      <h2>Habilidades</h2>
-      <p>Tecnologías en las que trabajo</p>
-
-      <div class="skills-grid">
+      <div class="skill-grid">
         <div class="skill-card">
           <div class="skill-header">
             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML">
@@ -332,7 +332,7 @@
         <div class="skill-card">
           <div class="skill-header">
             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JS">
-            <h3>JavaScript (ES6+)</h3>
+            <h3>JavaScript</h3>
           </div>
           <div class="progress-bar">
             <div class="progress" data-level="85"></div>
@@ -352,10 +352,7 @@
         </div>
       </div>
     </section>
-
-    <!-- SOBRE MÍ -->
-    <!-- SOBRE MÍ -->
-    <section class="about-section">
+    <section id="sobre-mi" class="section">
       <div class="container about-card">
         <div class="about-text">
           <h2 class="section-title">Sobre mí</h2>
@@ -409,13 +406,10 @@
 
   <footer class="footer">
     <p>© <span id="year"></span> Facundo De León — Diseño & Desarrollo Web</p>
-    <div class="social-links">
-      <a href="https://instagram.com/devices_.f2" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-      <a href="https://github.com/" target="_blank"><i class="fa-brands fa-github"></i></a>
-    </div>
+    <div class="social-links"> <a href="https://instagram.com/devices_.f2" target="_blank"><i
+          class="fa-brands fa-instagram"></i></a> <a href="https://github.com/" target="_blank"><i
+          class="fa-brands fa-github"></i></a> </div>
   </footer>
-
-
   <script src="script.js"></script>
 </body>
 
