--- a/index.html
+++ b/index.html
@@ -108,16 +108,16 @@
         </div>
         <div>
           <section class="social-links">
-            <a href="https://github.com/tuusuario" target="_blank" class="social-circle github">
+            <a href="https://github.com/fdLeon-dev" target="_blank" class="social-circle github">
               <i class="fab fa-github"></i>
             </a>
-            <a href="https://www.linkedin.com/in/tuusuario" target="_blank" class="social-circle linkedin">
+            <a href="https://www.linkedin.com/in/facundo-de-leon-/" target="_blank" class="social-circle linkedin">
               <i class="fab fa-linkedin-in"></i>
             </a>
-            <a href="https://twitter.com/tuusuario" target="_blank" class="social-circle twitter">
+            <a href="https://twitter.com/" target="_blank" class="social-circle twitter">
               <i class="fab fa-twitter"></i>
             </a>
-            <a href="mailto:tuemail@mail.com" class="social-circle mail">
+            <a href="mailto:facudeleon92@gmail.com" class="social-circle mail">
               <i class="fas fa-envelope"></i>
             </a>
           </section>
@@ -414,10 +414,11 @@
         <div class="contact-info">
           <h3>O si prefieres...</h3>
           <ul>
-            <li><i class="fas fa-envelope"></i> <a href="mailto:tuemail@gmail.com">tuemail@gmail.com</a></li>
-            <li><i class="fab fa-linkedin"></i> <a href="#">linkedin.com/in/tuusuario</a></li>
-            <li><i class="fab fa-github"></i> <a href="#">github.com/tuusuario</a></li>
-            <li><i class="fab fa-whatsapp"></i> <a href="https://wa.me/59812345678">+598 123 456 78</a></li>
+            <li><i class="fas fa-envelope"></i> <a href="mailto:facudeleon92@gmail.com">facudeleon92@gmail.com</a></li>
+            <li><i class="fab fa-linkedin"></i> <a
+                href="https://www.linkedin.com/in/facundo-de-leon-/">linkedin.com/in/facundo-de-leon-/</a></li>
+            <li><i class="fab fa-github"></i> <a href="https://github.com/fdLeon-dev">github.com/fdLeon-dev</a></li>
+            <li><i class="fab fa-whatsapp"></i> <a href="https://wa.me/59892803418">+598 123 456 78</a></li>
           </ul>
         </div>
       </div>
